--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <title>Refs & Portals</title>
   </head>
   <body>
-    <div id="modal"></div>
+    <div id="modal">
+
+    </div>
     <div id="content">
       <header>
         <h1>The <em>Almost</em> Final Countdown</h1>
